fix(frontend): Add spacing between form labels and inputs

--- a/app/frontend/shared/components/base/FormTextarea/index.scss
+++ b/app/frontend/shared/components/base/FormTextarea/index.scss
@@ -4,6 +4,8 @@
   margin-bottom: 1rem;
 
   label {
+    display: block;
+    margin-bottom: 5px;
     white-space: nowrap;
   }
 
